Update header.css to fix z-index issue

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,12 @@
 header .nav-wrapper {
   background-color: var(--background-color);
   width: 100%;
-  z-index: 2;
+  z-index: 1000;
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 4%);
 }
 
 header nav {
